[templates/nextjs-sxa] fixed styles(hide horizontal scrollbar) (#1625)

--- a/packages/create-sitecore-jss/src/templates/nextjs-sxa/src/assets/sass/components/_component-container.scss
+++ b/packages/create-sitecore-jss/src/templates/nextjs-sxa/src/assets/sass/components/_component-container.scss
@@ -1,11 +1,17 @@
 @import '@sass/abstracts/mixins';
 
+$size-padding: 8px;
 .container-wrapper {
   width: 100%;
 }
 
 .component {
   position: relative;
+  padding: 0 $size-padding;
+
+  @include respond-to(all-mobile) {
+    padding: 0;
+  }
 }
 
 .container {
@@ -18,5 +24,4 @@
   .component-content {
     @include clearfix();
   }
-
 }
